@@ -17,7 +17,9 @@ sysdep_routines += internal_accept4 recvmmsg internal_recvmmsg sendmmsg \
 endif
 
 ifeq ($(subdir),misc)
-sysdep_routines += sysctl clone llseek umount umount2 readahead \
+include $(firstword $(wildcard $(sysdirs:=/sysctl.mk)))
+
+sysdep_routines += $(sysctl) clone llseek umount umount2 readahead \
 		   setfsuid setfsgid makedev epoll_pwait signalfd \
 		   eventfd eventfd_read eventfd_write prlimit
 
