@@ -1,0 +1,2 @@
+# X32 doesn't support sysctl.
+sysctl =
